removed approach header gradient; safarI: fixed scrollbar size

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -350,6 +350,7 @@ body.fp-viewing-contact {
       a {
         background-color: white;
         transition: background .5s ease-in-out;
+        height: 12.5vh;
         span {
           display: none;
         }
