--- a/scss/_ourapproach.scss
+++ b/scss/_ourapproach.scss
@@ -32,7 +32,6 @@ body.approach-modal-open {
 #ourApproach {
   overflow: hidden;
   .section-headlines {
-    background-image: linear-gradient(180deg, rgba(225, 225, 225, 0.5) 80%, transparent);
     max-width: none;
     width: 100%;
     @media (max-width: $break-mobile){
